css/common.css
/* ... */
.nav li{
    float: right;
    font-size: 19px;
    list-style: outside none none;
    margin-left: 23px;
    margin-right: 17px;

}
.navigationlist{
    float:right;
    margin-top: 1px;
}

.border-fix{
    border-bottom: none;
}
.nav1 li{
    float: right;
    font-size: 16px;
    list-style: outside none none;
    margin-left: 17px;
    margin-right: 17px;
    margin-top:38px;
    color:#333;
}
/*.nav1 li{float: none; border-bottom:1px solid #fff;}*/
.header-padding{
    padding:0px;
}

.oj-web-applayout-content {
    padding:0px;
}
.logo{
    height:90px;

}
.menus{display: none;color: #fff;font-size: 35px;}
.mobile-menu{list-style-type: none;}
#forActive-mobile #forActiveul{display: none;}
@media (max-width:1280px) {
    #forActive-mobile #forActiveul{display: none;}
}
@media (max-width: 767px) {
    #forActive-desktop #forActiveul{display: none;}
    #forActive-mobile #forActiveul{display: none;}
    .nav1 li:last-child{float: none; border-bottom:none;}
    /*.nav1 li{
    float: none;
    display:block;
    clear:both;
    font-size: 16px;
    list-style: outside none none;
    margin-left: 0px;
    margin-right: 0px;
    margin-top:0px;
    padding:10px 5px;
    color:#333;
    }*/
    #forActiveul1 i{
        margin:5px 10px;
    }
    .mobile-menu li{display: inline;float: left;}
    .nav li{
        font-size: 16px !important ;
        margin: 0px 10px !important;
    }
    .logo{
        height:60px;
    }
    .menus{display: block;}
    .nav1 li{float: none;}
    .logo {
        height: 56px;
        margin-top: -8px;
        padding-left: 10px;
    }
    ul.mobile-menu {

        list-style: outside none none;
        margin-left: 10px;
        padding: 0;
        width: 160px;
    }
    ul#forActiveul1 {
        list-style: outside none none;
        margin: 0;
        padding: 0;
    }
    .navigationlist {
        float: right;
        width: 100%;
    }
}
.oj-panel {
    padding-bottom:0px;
}
.section1{
    border-bottom: 2px solid #a6a6a6;

}
.people-logo1{
    text-align:center !important;
    border-radius: 5px 5px 0px 0px;
    margin:8px;
    font-size:44px;
    padding-left: 24px;
}
.people-logo1 a{
    color:#000;
}
.people-logo2{
    text-align:center;
    border-radius: 5px 5px 0px 0px;
    font-size: 44px;
    border-color:#d6d6d6;
    margin:8px;
    background-color:#d9d9d9;
    color:#b8b8b;
}
#forActive li a{
    padding-right: 5px;
}
.slider-text{
    color:#fff;
    font-size:22px;
}
/*font for the slider heading*/ 
@font-face {
    font-family: nameHeading;
    src: url("../css/fonts/Font/Allura-Regular.otf");
}
.slider-heading{
    color:#fff;
    font-family:nameHeading;
    font-size: 40px;
    margin-left: -3px;/*Namrata*/
}

.side-box{
    width:295px;
    height:240px;
    opacity: 0.5;
    background-color: #fff;
    margin-top:20px;
    padding: 8px;
}
.slider-color{
    background-color: transparent;
    border-color: transparent;


}
.side-box p{
    font-size: 20px;

}
.right-wrong-icon{
    font-size: 32px;
    border-top: 1px solid;
    margin-top:80px;
}
.cross-top{
    padding-right: 5px;
    font-size: 24px;
    float:right;
    color:#fff !important;
}
.check-icon{
    float:left;
    margin-left:50px;
}
.close-icon{
    padding: 0px 8px 8px 8px;
    float:right;
    margin-right: 50px;
}
.btn-text-green{
    color: #fff;
    font-size: 50px;
    font-weight: normal;
    left: 168px;
    position: absolute;
    top: 55px;
}
.btn-text-red{
    color: #fff;
    font-size: 50px;
    font-weight: normal;
    left: 168px;
    position: absolute;
    top: 55px;
}
.btn-text-red1{
    color: #fff;
    font-size: 50px;
    font-weight: normal;
    left: 10px;
    position: absolute;
    top: 55px;
}
.green-button{
    float:left;

    position:relative;
}
.green-button img{
    width: 200px;
    margin:0px 100px;

}
.red-button{
    float:right;
    position:relative;
    cursor: pointer;
}
.red-button img{
    margin:0px 90px;
    width: 200px;
}
.red-button1 img{
    margin:0px 70px;
    width: 200px;
}


.inner-wrapper {
    top: 0;
    left: 0;
    margin-bottom: 0px;
    overflow: hidden;
    width: 940px;
    height: 470px;
}
.home-profile-pic{
    height: 25px;
    width: 25px;
    border-radius: 50%;
    border:1px solid #fff;
}
.control {
    display: none;
}



.overflow-wrapper {
    position: absolute;
    top: 0;
    left: 0;
    overflow-y: hidden;
    z-index: 1;
    -webkit-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -o-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    width: 400%;
    height: 100%;
}

.slide,.slide1  {
    float: left;

}
.edit-btn{
    margin-top:18px;
    font-size:24px;
}
.edit-btn span{
    float:left;
    border-radius: 50%;
    background-color: #4e4643 !important;
    width: 50px;
    height:50px;
    cursor: pointer;
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=11, Direction=187, Color=#333333)";/*IE 8*/
    -moz-box-shadow: -1px 8px 11px #333333;/*FF 3.5+*/
    -webkit-box-shadow: -1px 8px 11px #333333;/*Saf3-4, Chrome, iOS 4.0.2-4.2, Android 2.3+*/
    box-shadow: -1px 8px 11px #333333;/* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=11, Direction=187, Color=#333333); /*IE 5.5-7*/
}
.edit-btn span i{
    padding: 10px 13px;
}
.profile-text{
    float:right;
    font-size:25px;
}
.profile-pic{
    float: left;
    font-size: 145px;
    border-radius: 50%;
    height: 100px;
    width: 100px;
    border : 2px solid #fff;
}
.profile-name{
    margin-left: -98px;
    margin-top: 39px;
}
.profile-content{
    float: left;
    margin-left: 45px;
    margin-top: 75px;

}
.verticalbar{
    border-right: 1px solid #333;
    margin-top: 2px;
    padding-right: 55px;
}

/*flaoting button */

.container {
    position: fixed;
    margin: 1em;
    right: 3%;
    bottom: 40px;
    z-index: 10;
}
/* ... */

